# vox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  autogen.sh  configure.ac
src/: Makefile.am  Makefile.in  config.h.in  main.c
